--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,7 +10,77 @@
  *
  *= require_self
 */
+.menusplitter {
+  width:1px;
+  height:30px;
+  margin-top:13px;
+  background: rgba(255, 255, 255, 0.25);
+  float:right;
+}
 
+#meoptmenu {
+  padding:24px 7px 22px 7px;
+  cursor:pointer;
+}
+
+#menuopttog:hover {
+  background: rgba(255, 255, 255, 0.2);
+}
+
+#meoptmenu .droparr {
+  width:0px; 
+  height:0px; 
+  border-left:7px solid transparent;
+  border-right:7px solid transparent;
+  border-top:7px solid #FFFFFF;
+  font-size:0px;
+  line-height:0px;
+  opacity: 0.75;
+  filter: alpha(opacity=75);
+}
+#meoptmenu:hover .droparr {
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
+
+#namester {
+  float:right;
+  padding:18px 7px 17px 7px;
+  cursor:pointer;
+}
+
+#namester:hover {
+  background: rgba(255, 255, 255, 0.2);
+}
+
+#namester .fname {
+  float:left;
+  color:#fff;
+  font-size:13px;
+  font-weight:bolder;
+  opacity: 0.85;
+  filter: alpha(opacity=85);
+}
+
+#namester .myprofpic {
+  height:30px;
+  width:30px;
+  float:left;
+  margin:-5px 10px -10px 0;
+
+  -moz-box-shadow:0 0px 4px rgba(34,25,25,0.4);
+  -webkit-box-shadow:0 0px 4px rgba(34,25,25,0.4);
+  box-shadow: 0 0px 4px rgba(34,25,25,0.4);
+}
+
+#namester a:hover {
+  text-decoration: none;
+}
+
+#namester:hover .fname {
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
 
 #top-notch-btn {
   margin-top:12px;
