--- a/app/assets/stylesheets/strap.css
+++ b/app/assets/stylesheets/strap.css
@@ -2448,9 +2448,9 @@ table .span24 {
 .dropdown-menu li > a:hover,
 .dropdown-menu .active > a,
 .dropdown-menu .active > a:hover {
-  color: #ffffff;
+  color: #333333;
   text-decoration: none;
-  background-color: #0088cc;
+  background-color: #D6E6FF;
 }
 
 .open {
