--- a/app/views/layouts/_embed.html.erb
+++ b/app/views/layouts/_embed.html.erb
@@ -1,6 +1,6 @@
 <% if @binder.current_version.croc? %>
 
-	<iframe id="crocFrame" width="700" height="600" src="https://crocodoc.com/view/<%= @binder.current_version.get_croc_session %>" ></iframe>
+	<iframe id="crocFrame" width="700" height="600" class="embeddrop" frameborder="0" src="https://crocodoc.com/view/<%= @binder.current_version.get_croc_session %>" ></iframe>
 
 <% elsif @binder.current_version.youtube? %>
 
@@ -8,19 +8,19 @@
 
 <% elsif @binder.current_version.educreations? %>
 
-	<center><iframe width="480" height="300" src="http://www.educreations.com/lesson/embed/<%= @binder.current_version.get_educreations_id %>" frameborder="0" allowfullscreen></iframe></center>
+	<center><iframe width="700" height="390" src="http://www.educreations.com/lesson/embed/<%= @binder.current_version.get_educreations_id %>" class="embeddrop" frameborder="0" allowfullscreen></iframe></center>
 
 <% elsif @binder.current_version.vimeo? %>
 
-	<center><iframe src="http://player.vimeo.com/video/<%= @binder.current_version.get_vimeo_id %>" width="500" height="281" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></center>
+	<center><iframe src="http://player.vimeo.com/video/<%= @binder.current_version.get_vimeo_id %>" width="700" height="390" class="embeddrop" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></center>
 
 <% elsif @binder.current_version.schooltube? %>
 
-	<center><iframe width="500" height="375" src="http://www.schooltube.com/embed/<%= @binder.current_version.get_schooltube_id %>" frameborder="0" allowfullscreen="allowfullscreen" mozallowfullscreen="mozallowfullscreen" webkitallowfullscreen="webkitallowfullscreen"></iframe></center>
+	<center><iframe width="700" height="390" src="http://www.schooltube.com/embed/<%= @binder.current_version.get_schooltube_id %>" frameborder="0" class="embeddrop" allowfullscreen="allowfullscreen" mozallowfullscreen="mozallowfullscreen" webkitallowfullscreen="webkitallowfullscreen"></iframe></center>
 
 <% elsif @binder.current_version.showme? %>
 
-	<center><iframe src="http://www.showme.com/sma/embed/?s=<%= @binder.current_version.get_showme_id %>&w=580&h=434" width="580" height="434" ></iframe></center>
+	<center><iframe src="http://www.showme.com/sma/embed/?s=<%= @binder.current_version.get_showme_id %>&w=700&h=390" width="700" height="390" frameborder="0" class="embeddrop" ></iframe></center>
 
 <% elsif @binder.current_version.img? %>
 
