--- a/app/assets/stylesheets/strap.css
+++ b/app/assets/stylesheets/strap.css
@@ -2450,7 +2450,7 @@ table .span24 {
 .dropdown-menu .active > a:hover {
   color: #333333;
   text-decoration: none;
-  background-color: #D6E6FF;
+  background-color: #C9DEFD;
 }
 
 .open {
