--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -4,7 +4,8 @@
 <p><b>You: <%=link_to current_teacher.email, current_teacher %></b></p>
 <br />
 <br />
-<% if @teachers.size > 1 %>
+<% if false #@teachers.size > 1 
+	%>
 <p>Other teachers:</p>
 	<table>
 		<tr>
