Added applicants, educreations fix, disabled slider on inherited permissions

--- a/app/views/layouts/_show.html.erb
+++ b/app/views/layouts/_show.html.erb
@@ -38,7 +38,7 @@
         <div class="conbox">
           <div class="headstrip" style="margin-bottom:10px">
 
-            <div style="float:right; margin:5px 5px 0 0"><input type="checkbox" class="pub_on" <%= 'checked="checked"' if @binder.is_pub? %>/></div>
+            <div style="float:right; margin:5px 5px 0 0"><input type="checkbox" class="pub_on" <%= 'disabled' if @binder.inherited_pub? %> <%= 'checked=checked' if @binder.is_pub? %> /></div>
             <div class="inner">
             Public 
             </div>
