--- a/app/assets/stylesheets/strap.css
+++ b/app/assets/stylesheets/strap.css
@@ -165,8 +165,7 @@ body {
   color: #333333;
   background-color: #F6F6F6;
   background: #F7F5F5 url(/assets/paper.jpg) repeat;
-  
-  padding-top: 120px;
+  padding-top: 54px;
   padding-bottom: 40px;
 }
 
@@ -2675,6 +2674,14 @@ button.close {
   -webkit-box-shadow: none;
      -moz-box-shadow: none;
           box-shadow: none;
+}
+
+.btn-medium {
+  padding: 6px 11px;
+  font-size: 14px;
+  -webkit-border-radius: 4px;
+     -moz-border-radius: 5px;
+          border-radius: 5px;
 }
 
 .btn-large {
