--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -1,109 +1,219 @@
-<h1>Profile Page</h1>
-<p>app/views/teachers/show.html.erb</p>
-
-<p><%= "#{ @teacher.full_name }" %></p>
-<p><%=  #!@teacher.info.avatar.path.to_s.empty? ? image_tag(@teacher.info.avatar, :width => "200") : "<no profile picture>" 
-%></p>
-
-<img src="<%=	@teacher.info.avatar.url.to_s %>" />
-<img src="<%= @teacher.info.avatar.thumb_lg.to_s %>" />
-<img src="<%= @teacher.info.avatar.thumb_sm.to_s %>" />
-
-<% if !@teacher.info.nil? %>
-<p><%= "Bio: #{@teacher.info.bio}" if !@teacher.info.bio.empty? %></p>
-<p><%= "Website: #{@teacher.info.website}" if !@teacher.info.website.empty? %></p>
+<% content_for :headcon do %>
+  <%= stylesheet_link_tag "teacher", :media => "all" %>
 <% end %>
 
-<%= link_to "Edit Info", "/editinfo" if current_teacher.id == @teacher.id %>
+<div class="container">
+  <div class="profile-avatar-wrap">
+    <img src="">
+    <span class="clips">
+      <strong>4,204</strong> clips
+    </span>
+  </div>
+</div>
 
-<% if current_teacher.id != @teacher.id %>
-	<%= form_for @relationship, :url => get_subscription_path() do |f| %>
-		<%= get_subscription_button(f) %>
-	<% end %>
-	<%= form_for @relationship, :url => get_colleague_path() do |f| %>
-		<%= get_colleague_button(f) %>
-	<% end %>
-<% else %>
-	<% if @colleague_requests.any? %>
-		<p>You have pending colleague requests!</p>
-		<% @colleague_requests.each do |request| %>
-			<%= form_for request, :url => confadd_path(request.user_id) do |f| %>
-				<%= f.submit "Accept colleague request from #{Teacher.find(request.user_id).full_name}", :confirm => "Are you absofuckinlutely positve?" %>
-			<% end %>
-		<% end %>
-	<% end %>
-	<% if @colleagues.any? %>
-		<hr />
-		<p>You are colleagues with the following teachers:</p>
-		<table>
-			<tr>
-				<td colspan = "2">
-					<hr />
-				</td>
-			</tr>
-			<% @colleagues.each do |colleague| %>
-			<tr>
-				<td>
-					<%= # deprecated
-					get_teacher_avatar(colleague, {:height => 60, :border => 1}) %>
-				</td>
-				<td>
-					<p>
-						<%= "#{colleague.full_name} " %>
-						<%= link_to colleague.email, colleague %>
-					</p>
-				</td>
-			</tr>
-			<tr>
-				<td colspan = "2">
-					<hr />
-				</td>
-			</tr>
-			<% end %>
-			</tr>
-		</table>
-	<% end %>
-	<br />
-	<% if @subscriptions.any? %>
-		<hr />
-		<p>You are subscribed to the following teachers:</p>
-		<table>
-			<tr>
-				<td colspan = "2">
-					<hr />
-				</td>
-			</tr>
-			<% @subscriptions.each do |subscription| %>
-			<tr>
-				<td>
-					<%= get_teacher_avatar(subscription, {:height => 60, :border => 1}) %>
-				</td>
-				<td>
-					<p>
-						<%= "#{subscription.full_name}: " %>
-						<%= link_to subscription.email, subscription %>
-					</p>
-				</td>
-			</tr>
-			<tr>
-				<td colspan = "2">
-					<hr />
-				</td>
-			</tr>
-			<% end %>
-		</table>
-	<% end %>
+<div class="profile-header-bar clearfix">
+  <div class="container clearfix">
+    <div class="profile-header-bar-push">
+      <h2 class="pull-left"><strong>Erin Klein</strong> (KleinErin)</h2>
+      <div class="pull-right">
+        <a class="btn btn-medium btn-primary">Subscribe</a>
+        <a class="btn btn-medium">Add Colleague</a>
+        <a class="btn btn-medium">Message</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="profile-info-section">
+  <div class="container">
+    <div class="pull-left profile-left-push">
+      <p>
+        I'm just trying to make a positive influence in the teaching of my students. Thoughts are my own, not my employers'
+      </p>
+      <ul class="profile-info-items">
+        <li>
+          <a href="http://twitter.com/kleinerin">
+            <span class="twitterIcon"></span>
+            KleinEric
+          </a>
+        </li>
+        <li>
+          <span class="locationIcon"></span>
+          Lives in Chicago, Illinois
+          </span>
+        </li>
+      </ul>
+    </div>
+    <div class="pull-right profile-module">
+      <h3>
+        <strong>40</strong>
+        Subscriptions 
+      </h3>
+      <ul class="profile-avatars">
+        <li>
+          <a href="#">
+            <img src="">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="">
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="pull-right profile-module">
+      <h3>
+        <strong>25</strong>
+        Subscribers 
+      </h3>
+      <ul class="profile-avatars">
+        <li>
+          <a href="#">
+            <img src="">
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <ul class="nav-tabs onProfile">
+    <li class="active">
+      <a href="/teachers/teacherid">
+        Portfolio
+      </a>
+    </li>
+    <li>
+      <a href="/teachers/teacherid">
+        Activity 
+      </a>
+    </li>
+  </ul>
+</div>
+
+<div class="container profile-content">
+  Feed goes here, lulz
+</div>
+
+<% if false %>
+        <h1>Profile Page</h1>
+        <p>app/views/teachers/show.html.erb</p>
+
+        <p><%= "#{ @teacher.full_name }" %></p>
+        <p><%=  #!@teacher.info.avatar.path.to_s.empty? ? image_tag(@teacher.info.avatar, :width => "200") : "<no profile picture>" 
+        %></p>
+
+        <img src="<%=	@teacher.info.avatar.url.to_s %>" />
+        <img src="<%= @teacher.info.avatar.thumb_lg.to_s %>" />
+        <img src="<%= @teacher.info.avatar.thumb_sm.to_s %>" />
+
+        <% if !@teacher.info.nil? %>
+        <p><%= "Bio: #{@teacher.info.bio}" if !@teacher.info.bio.empty? %></p>
+        <p><%= "Website: #{@teacher.info.website}" if !@teacher.info.website.empty? %></p>
+        <% end %>
+
+        <%= link_to "Edit Info", "/editinfo" if current_teacher.id == @teacher.id %>
+
+        <% if current_teacher.id != @teacher.id %>
+            <%= form_for @relationship, :url => get_subscription_path() do |f| %>
+                <%= get_subscription_button(f) %>
+            <% end %>
+            <%= form_for @relationship, :url => get_colleague_path() do |f| %>
+                <%= get_colleague_button(f) %>
+            <% end %>
+        <% else %>
+            <% if @colleague_requests.any? %>
+                <p>You have pending colleague requests!</p>
+                <% @colleague_requests.each do |request| %>
+                    <%= form_for request, :url => confadd_path(request.user_id) do |f| %>
+                        <%= f.submit "Accept colleague request from #{Teacher.find(request.user_id).full_name}", :confirm => "Are you absofuckinlutely positve?" %>
+                    <% end %>
+                <% end %>
+            <% end %>
+            <% if @colleagues.any? %>
+                <hr />
+                <p>You are colleagues with the following teachers:</p>
+                <table>
+                    <tr>
+                        <td colspan = "2">
+                            <hr />
+                        </td>
+                    </tr>
+                    <% @colleagues.each do |colleague| %>
+                    <tr>
+                        <td>
+                            <%= # deprecated
+                            get_teacher_avatar(colleague, {:height => 60, :border => 1}) %>
+                        </td>
+                        <td>
+                            <p>
+                                <%= "#{colleague.full_name} " %>
+                                <%= link_to colleague.email, colleague %>
+                            </p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan = "2">
+                            <hr />
+                        </td>
+                    </tr>
+                    <% end %>
+                    </tr>
+                </table>
+            <% end %>
+            <br />
+            <% if @subscriptions.any? %>
+                <hr />
+                <p>You are subscribed to the following teachers:</p>
+                <table>
+                    <tr>
+                        <td colspan = "2">
+                            <hr />
+                        </td>
+                    </tr>
+                    <% @subscriptions.each do |subscription| %>
+                    <tr>
+                        <td>
+                            <%= get_teacher_avatar(subscription, {:height => 60, :border => 1}) %>
+                        </td>
+                        <td>
+                            <p>
+                                <%= "#{subscription.full_name}: " %>
+                                <%= link_to subscription.email, subscription %>
+                            </p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan = "2">
+                            <hr />
+                        </td>
+                    </tr>
+                    <% end %>
+                </table>
+            <% end %>
+        <% end %>
+        <% if @owned_root_binders.any? %>
+
+        <br />
+        <hr />
+            <p><%= "#{ @teacher.full_name }'s binders:" %></p>
+            <p>[Home]</p>
+            <br />
+            <% @owned_root_binders.each do |root_binder| %>
+                &nbsp;&nbsp;&nbsp;[<%= link_to "#{root_binder.title}", "/teachers/#{params[:id]}/binder/#{root_binder.id}" %>]
+                <br />
+            <% end %>
+        <% end %>
 <% end %>
-<% if @owned_root_binders.any? %>
-
-<br />
-<hr />
-	<p><%= "#{ @teacher.full_name }'s binders:" %></p>
-	<p>[Home]</p>
-	<br />
-	<% @owned_root_binders.each do |root_binder| %>
-		&nbsp;&nbsp;&nbsp;[<%= link_to "#{root_binder.title}", "/teachers/#{params[:id]}/binder/#{root_binder.id}" %>]
-		<br />
-	<% end %>
-<% end %>
-
