--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -4,7 +4,7 @@
       <div class="navbar-inner">
         <div class="container">
 
-          <a class="brand" href="#"><%= image_tag("logo.png") %></a>
+          <a class="brand" href="/"><%= image_tag("claco.png", :style => "height:26px") %></a>
           <div class="nav-collapse">
 
 
@@ -21,7 +21,7 @@
 
                 <ul class="dropdown-menu" style="margin-top:2px;margin-right:-6px">
                   <li>
-                    <a href="#">Edit Profile</a>
+                    <a href="/editinfo">Edit Info</a>
                   </li>
 
                   <li>
