--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -4,9 +4,9 @@
 
 <div class="container">
   <div class="profile-avatar-wrap">
-    <img src="">
+    <img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-ash2/273743_100002541791520_1077070822_n.jpg">
     <span class="clips">
-      <strong>4,204</strong> clips
+      <strong>4,204</strong> snaps
     </span>
   </div>
 </div>
@@ -14,9 +14,9 @@
 <div class="profile-header-bar clearfix">
   <div class="container clearfix">
     <div class="profile-header-bar-push">
-      <h2 class="pull-left"><strong>Erin Klein</strong> (KleinErin)</h2>
+      <h2 class="pull-left"><strong><%= @teacher.full_name %></strong> (<%= @teacher.username %>)</h2>
       <div class="pull-right">
-        <a class="btn btn-medium btn-primary">Subscribe</a>
+        <a class="btn btn-medium btn-primary actbtn">Subscribe</a>
         <a class="btn btn-medium">Add Colleague</a>
         <a class="btn btn-medium">Message</a>
       </div>
