--- a/app/views/teachers/editinfo.html.erb
+++ b/app/views/teachers/editinfo.html.erb
@@ -1,25 +1,33 @@
-<p>app/views/teachers/editinfo.html.erb</p>
-
-<%= current_teacher.full_name %>
-<br />
-<br />
-
-<%= form_for current_teacher.info, :url => updateinfo_path do |f| %>
-
-	<!-- render 'shared/error_messages' -->
-	<%= render 'shared/error_messages', object: f.object %>
-
-	<%= get_teacher_avatar(current_teacher,{:height => 200, :border => 1}) %>
-
-  	<div><%= f.label :avatar, "Profile Picture:" %><br />
-  	<%= f.file_field :avatar %></div>
-
-	<div><%= f.label :bio, "Bio" %><br />
-	<%= f.text_area :bio %></div>
-
-	<div><%= f.label :website, "Website" %> <br />
-	<%= f.text_field :website %></div>
-
-	<div><%= f.submit "Update" %></div>
-
+<% content_for :headcon do %>
+	<%= stylesheet_link_tag    "editinfo", :media => "all" %>
 <% end %>
+
+<div class="container">
+
+	<div class="mainbox">
+		<%= current_teacher.full_name %>
+		<br />
+		<br />
+
+		<%= form_for current_teacher.info, :url => updateinfo_path do |f| %>
+
+			<!-- render 'shared/error_messages' -->
+			<%= render 'shared/error_messages', object: f.object %>
+
+			<%= get_teacher_avatar(current_teacher,{:height => 200, :border => 1}) %>
+
+		  	<div><%= f.label :avatar, "Profile Picture:" %><br />
+		  	<%= f.file_field :avatar %></div>
+
+			<div><%= f.label :bio, "Bio" %><br />
+			<%= f.text_area :bio %></div>
+
+			<div><%= f.label :website, "Website" %> <br />
+			<%= f.text_field :website %></div>
+
+			<div><%= f.submit "Update" %></div>
+
+		<% end %>
+
+	</div>
+</div>
