--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
 	<% javascript_include_tag "wy/advanced" %>
 	<%= stylesheet_link_tag    "home/main", :media => "all" %>
 <% end %>
-
+<% if signed_in? %>
 <div class="container">
 
 	<div id="paneleft">
@@ -28,8 +28,7 @@
 
 
 </div>
-
-
+<% end %>
 
 
 
