--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
 		<%= javascript_include_tag "dropdown" %>
 		<%= javascript_include_tag "facebox" %>
 		<%= javascript_include_tag "tooltip" %>
+		<%= javascript_include_tag "tabs" %>
 		<%= javascript_tag "$('a.pjax').pjax('[data-pjax-container]');$.pjax.defaults.timeout = 5000;$.pjax.defaults.maxCacheLength=0;" %>
 		<%= yield :headcon %>
 
