Added name to top bar

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -34,10 +34,10 @@
 
             <div class="menusplitter"></div>
 
-            <a href="#">
+            <a href="/<%= current_teacher.username %>">
             <div id="namester">
                 <img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-ash2/273743_100002541791520_1077070822_q.jpg" class="myprofpic" />
-                <div class="fname">Eric Simons</div>
+                <div class="fname"><%= current_teacher.full_name %></div>
             </div>
             </a>
 
