--- a/app/views/teachers/editinfo.html.erb
+++ b/app/views/teachers/editinfo.html.erb
@@ -14,7 +14,10 @@
 			<!-- render 'shared/error_messages' -->
 			<%= render 'shared/error_messages', object: f.object %>
 
-			<%= get_teacher_avatar(current_teacher,{:height => 200, :border => 1}) %>
+			<%= #get_teacher_avatar(current_teacher,{:height => 200, :border => 1}) 
+			%>
+
+			<img src=<%= current_teacher.info.avatar %> />
 
 		  	<div><%= f.label :avatar, "Profile Picture:" %><br />
 		  	<%= f.file_field :avatar %></div>
