corrections on feed logs

--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -116,7 +116,7 @@
 	%>
 <% #end 
 %>
-
+HERE
 <% @feed.each do |f| %>
 	<%= f[:owner].fname.to_s %>&nbsp;
 	<%= f[:owner].lname.to_s %>&nbsp;,&nbsp;
