--- a/app/views/layouts/_contentlist.html.erb
+++ b/app/views/layouts/_contentlist.html.erb
@@ -83,24 +83,20 @@
 
                       	<% if !imgarr[1].nil? && !imgarr[1].empty? %>
 
-	                        <div class="thumb-wrap">
 	                          <img class="thumb1" src="<%= imgarr[1].to_s %>" />
 
 	                          <% if !imgarr[2].nil? && !imgarr[2].empty? %>
 
-		                          <br />
 
 		                          <img class="thumb2" src="<%= imgarr[2].to_s %>" />
+
+		                          <img class="thumb3" src="<%= imgarr[2].to_s %>" />
 		                      <% end %>
-	                        </div>
 
 	                    <% end %>
 
     		              </div>
 
-    		              <div class="contype">
-	                      	<img src="/assets/binders/types/folder.png" style="width:24px" />
-	                      </div>
     		            </div>
 
 		            <% end %>
