Edit info (minus change pw) wired up

--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -4,7 +4,7 @@
 
 <div class="container">
   <div class="profile-avatar-wrap">
-    <img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-ash2/273743_100002541791520_1077070822_n.jpg">
+    <img src="<%= @teacher.info.avatar.thumb_lg.url %>">
     <span class="clips">
       <strong>4,204</strong> snaps
     </span>
