--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -36,7 +36,7 @@
 
             <a href="/<%= current_teacher.username %>">
             <div id="namester">
-                <img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-ash2/273743_100002541791520_1077070822_q.jpg" class="myprofpic" />
+                <img src="<%= current_teacher.info.avatar.thumb_sm %>" class="myprofpic" />
                 <div class="fname"><%= current_teacher.full_name %></div>
             </div>
             </a>
