--- a/app/views/teachers/editinfo.html.erb
+++ b/app/views/teachers/editinfo.html.erb
@@ -16,10 +16,9 @@
 		<div class="tab-content">
 		  <div class="tab-pane active" id="personal">
 
-		  	<%= form_for current_teacher.info, :url => updateinfo_path do |f| %>
+		  	<%= form_for current_teacher, :url => updateinfo_path, :html => {:method => :POST, :multipart => true} do |f| %>
 
-			<!-- render 'shared/error_messages' -->
-			<%= render 'shared/error_messages', object: f.object %>
+			<% #render 'shared/error_messages', object: f.object %>
 
 			<%= #get_teacher_avatar(current_teacher,{:height => 200, :border => 1}) 
 			%>
@@ -31,14 +30,13 @@
 			</div>
 
 			<div class="imgbox">
-				<img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-ash2/273743_100002541791520_1077070822_n.jpg" class="imger" />
-
-
+				<img src="<%= current_teacher.info.avatar.url %>" class="imger" />
 			</div>
 
 
 		  	<div style="margin-top:30px;color:#444;font-style:italic">Update your profile picture<br />
-		  	<%= f.file_field :avatar %></div>
+		  	<%= fields_for current_teacher.info do |i| %>
+		  	<%= i.file_field :avatar %><%= i.hidden_field :avatar_cache %></div>
 
 		  	<div style="clear:both"></div>
 
@@ -51,7 +49,8 @@
 			</div>
 
 			<div>
-				<input type="text" placeholder="First name" class="nametext" /> <input type="text" placeholder="Last name" class="nametext" />
+				<%= f.text_field :fname, :placeholder => "First name", :class => "nametext" %>
+				<%= f.text_field :lname, :placeholder => "Last name", :class => "nametext" %>
 			</div>
 
 
@@ -65,12 +64,13 @@
 			<div>
 		
 
-			<input type="text" id="city" placeholder="Enter your city name" />
+			<input type="text" id="city" placeholder="Enter your city name" <%= 'style=display:none' if !(current_teacher.info.city.empty? || current_teacher.info.country.empty? || current_teacher.info.state.empty?) %> />
 
-			<div class="fulldiv" style="display:none">
+			<div class="fulldiv" <%= 'style=display:none' if (current_teacher.info.city.empty? || current_teacher.info.country.empty? || current_teacher.info.state.empty?) %>>
 				<a href="#" onclick="$(this).parent().hide(); $('#city').val('').show().focus(); return false" class="fullnameswap">Change location</a><br />
 
-				<input type="text" id="fulllocation" readonly />
+				<%= i.text_field "fulllocation", :id => "fulllocation", :value => current_teacher.info.fulllocation, :readonly => true %>
+
 			</div>
 
 			</div>
@@ -83,7 +83,7 @@
 			</div>
 
 			<div>
-				<textarea class="biotext" placeholder="Why you teach, how long you've been teaching, etc"></textarea>
+				<%= i.text_area :bio, :class => "biotext", :placeholder => "Why you teach, how long you've been teaching, etc", :value => current_teacher.info.bio %>
 			</div>
 
 
@@ -94,13 +94,15 @@
 			</div>
 
 			<div>
-				<%= image_tag('settings/website.png', :style => "float:left; margin-top:7px;margin-right:5px") %><input type="text" placeholder="Personal website (or blog)" /><br />
+				<%= image_tag('settings/website.png', :style => "float:left; margin-top:7px;margin-right:5px") %>
+				<%= i.text_field :website, :placeholder => "Personal website (or blog)" %><br />
 
 				<%= image_tag('settings/twitter.png', :style => "float:left; margin-top:6px;margin-right:5px") %>
-				<input type="text" placeholder="Twitter username" /><br />
+				<%= i.text_field :twitterhandle, :placeholder => "Twitter username" %><br />
 
 				<%= image_tag('settings/facebook.png', :style => "float:left; margin-top:6px;margin-right:5px") %>
-				<input type="text" placeholder="Facebook username" />
+				<%= i.text_field :facebookurl, :placeholder => "Facebook username" %>
+				<% end %>
 			</div>
 
 
