--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -28,7 +28,7 @@
   <div class="container">
     <div class="pull-left profile-left-push">
       <p>
-        I'm just trying to make a positive influence in the teaching of my students. Thoughts are my own, not my employers'
+        <%= current_teacher.info.bio %>
       </p>
       <ul class="profile-info-items">
         <li>
