--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,9 +17,15 @@
 
 			<div style="margin-top:-15px"></div>
 
-
-
-
+			<% @feed.each do |f| %>
+				<%= f[:owner].fname.to_s %>&nbsp;
+				<%= f[:owner].lname.to_s %>&nbsp;,&nbsp;
+				<%= f[:binder].title.to_s %>&nbsp;,&nbsp;
+				<%= f[:log].method.to_s %>&nbsp;,&nbsp;
+				<%= #Time.at(f[:log].timestamp).to_datetime 
+				%><%= time_ago_in_words(Time.at(f[:log].timestamp).to_datetime) %> ago
+				<br />
+			<% end %>
 
 			<div class="newsitem">
 				<div class="imgarea">
@@ -184,9 +190,6 @@
 <br />
 <br />
 <br />
-<% @feed.each do |f| %>
-	<%= f.title.to_s %><br />
-<% end %>
 <br />
 <br />
 <br />
