Change password working

--- a/app/views/teachers/editinfo.html.erb
+++ b/app/views/teachers/editinfo.html.erb
@@ -134,12 +134,14 @@
 				Choose a new password for your account
 			</div>
 
+			<%= form_for current_teacher, :url => editinfo_path, :method => :put do |f| %>
+
 			<div>
-				<input type="password" placeholder="New password" />
+				<%= f.password_field :password, :placeholder => "New password", :autocomplete => "off"%>
 			</div>
 
 			<div>
-				<input type="password" placeholder="Confirm password" />
+				<%= f.password_field :password_confirmation, :placeholder => "Confirm password" %>
 			</div>
 
 
@@ -147,7 +149,7 @@
 				<button type="submit" class="btn btn-large btn-primary" style="font-weight:bolder">Change your password</button>
 			</div>
 
-
+			<% end %>
 
 
 		  </div>
