--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,7 +17,12 @@
 
 			<div style="margin-top:-15px"></div>
 
+			<% # ["create","createfile","createcontent","update","updatetags","setpub"] 
+			%>
+
 			<% @feed.each do |f| %>
+
+				<!--
 				<%= f[:owner].fname.to_s %>&nbsp;
 				<%= f[:owner].lname.to_s %>&nbsp;,&nbsp;
 				<%= f[:binder].title.to_s %>&nbsp;,&nbsp;
@@ -25,6 +30,295 @@
 				<%= #Time.at(f[:log].timestamp).to_datetime 
 				%><%= time_ago_in_words(Time.at(f[:log].timestamp).to_datetime) %> ago
 				<br />
+				-->
+
+				<% 
+				case f[:log].method.to_s
+
+					when "create" %>
+
+						<div class="newsitem">
+							<div class="imgarea">
+								<a href="#">
+									<!--<img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-ash2/273743_100002541791520_1077070822_q.jpg">-->
+									<img src=<%= f[:owner].info.avatar.thumb_md.url.to_s %>>
+								</a>
+							</div>
+
+
+							<div class="feedcontent">
+								<div class="thetitle">
+									<!--<a href="#">Eric Simons</a> created <a href="#">Dynamic Earth Systems</a> two minutes ago.-->
+									<a href="#"><%= "#{f[:owner].fname} #{f[:owner].lname}" %></a> created <a href="#"><%= f[:binder].title %></a> <%= time_ago_in_words(Time.at(f[:log].timestamp).to_datetime) %> ago.
+								</div>
+
+								<% if !f[:binder].body.empty? %>
+								<a href="#" class="conlink">
+									<div class="thecontent">
+
+											<div class="txtcon">
+												<div class="condesc">
+													<!--The curiosity rover successfully landed on the Mars surface last Friday. These photos are the first to come back from the red planet. Very exciting times for the NASA team! <u>view more</u>-->
+													<%= f[:binder].body %>
+												</div>
+											</div>
+
+										<div style="clear:both"></div>
+									</div>
+								</a>
+								<% end %>
+
+							</div>
+
+
+							<div style="clear:both"></div>
+						</div>
+
+					<% when "createfile" %>
+
+						<div class="newsitem">
+							<div class="imgarea">
+								<a href="#">
+									<!--<img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-ash2/273743_100002541791520_1077070822_q.jpg">-->
+									<img src=<%= f[:owner].info.avatar.thumb_md.url.to_s %>>
+								</a>
+							</div>
+
+
+							<div class="feedcontent">
+								<div class="thetitle">
+									<a href="#"><%= "#{f[:owner].fname} #{f[:owner].lname}" %></a> added a file to <a href="#"><%= f[:binder].parents[1]["title"] %></a> <%= time_ago_in_words(Time.at(f[:log].timestamp).to_datetime) %> ago.
+								</div>
+
+
+								<a href="#" class="conlink">
+									<div class="thecontent">
+											<!-- <div class="previmg" style="background-image: url(http://img.cla.co/3b4c0e0a00ddab30cff952e4a7158c95/thumb_lg.png)"></div> -->
+											<% if !f[:binder].current_version.nil? && f[:binder].current_version.imgstatus["img_thumb_lg"]["generated"] %>
+												<div class="previmg" style="background-image: url('<%= f[:binder].current_version.img_thumb_lg.url %>')"></div>
+											<% end %>
+
+											<div class="txtcon">
+												<div class="contitle">
+													<!--Curiosity Landing Pictures (NASA Exclusive)-->
+													<%= f[:binder].title %>
+												</div>
+
+												<% if !f[:binder].body.empty? %>
+												<div class="condesc">
+													<!-- The curiosity rover successfully landed on the Mars surface last Friday. These photos are the first to come back from the red planet. Very exciting times for the NASA team! <u>view more</u> -->
+													<%= f[:binder].body %>
+												</div>
+												<% end %>
+											</div>
+
+										<div style="clear:both"></div>
+									</div>
+								</a>
+
+							</div>
+
+
+							<div style="clear:both"></div>
+						</div>
+
+					<% when "createcontent" %>
+
+						<div class="newsitem">
+							<div class="imgarea">
+								<a href="#">
+									<!--<img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-ash2/273743_100002541791520_1077070822_q.jpg">-->
+									<img src=<%= f[:owner].info.avatar.thumb_md.url.to_s %>>
+								</a>
+							</div>
+
+
+							<div class="feedcontent">
+								<div class="thetitle">
+									<a href="#"><%= "#{f[:owner].fname} #{f[:owner].lname}" %></a> added content to <a href="#"><%= f[:binder].parents[1]["title"] %></a> <%= time_ago_in_words(Time.at(f[:log].timestamp).to_datetime) %> ago.
+								</div>
+
+
+								<a href="#" class="conlink">
+									<div class="thecontent">
+											<!-- <div class="previmg" style="background-image: url(http://img.cla.co/3b4c0e0a00ddab30cff952e4a7158c95/thumb_lg.png)"></div> -->
+											<% if !f[:binder].current_version.nil? && f[:binder].current_version.imgstatus["img_thumb_lg"]["generated"] %>
+												<div class="previmg" style="background-image: url('<%= f[:binder].current_version.img_thumb_lg.url %>')"></div>
+											<% end %>
+
+											<div class="txtcon">
+												<div class="contitle">
+													<!--Curiosity Landing Pictures (NASA Exclusive)-->
+													<%= f[:binder].title %>
+												</div>
+
+												<% if !f[:binder].body.empty? %>
+												<div class="condesc">
+													<!-- The curiosity rover successfully landed on the Mars surface last Friday. These photos are the first to come back from the red planet. Very exciting times for the NASA team! <u>view more</u> -->
+													<%= f[:binder].body %>
+												</div>
+												<% end %>
+											</div>
+
+										<div style="clear:both"></div>
+									</div>
+								</a>
+
+							</div>
+
+
+							<div style="clear:both"></div>
+						</div>
+
+					<% when "update" %>
+
+						<div class="newsitem">
+							<div class="imgarea">
+								<a href="#">
+									<!--<img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-ash2/273743_100002541791520_1077070822_q.jpg">-->
+									<img src=<%= f[:owner].info.avatar.thumb_md.url.to_s %>>
+								</a>
+							</div>
+
+
+							<div class="feedcontent">
+								<div class="thetitle">
+									<a href="#"><%= "#{f[:owner].fname} #{f[:owner].lname}" %></a> updated <a href="#"><%= f[:binder].parents[1]["title"] %></a> <%= time_ago_in_words(Time.at(f[:log].timestamp).to_datetime) %> ago.
+								</div>
+
+
+								<a href="#" class="conlink">
+									<div class="thecontent">
+											<!-- <div class="previmg" style="background-image: url(http://img.cla.co/3b4c0e0a00ddab30cff952e4a7158c95/thumb_lg.png)"></div> -->
+											<% if !f[:binder].current_version.nil? && f[:binder].current_version.imgstatus["img_thumb_lg"]["generated"] %>
+												<div class="previmg" style="background-image: url('<%= f[:binder].current_version.img_thumb_lg.url %>')"></div>
+											<% end %>
+
+											<div class="txtcon">
+												<div class="contitle">
+													<!--Curiosity Landing Pictures (NASA Exclusive)-->
+													<%= f[:binder].title %>
+												</div>
+
+												<% if !f[:binder].body.empty? %>
+												<div class="condesc">
+													<!-- The curiosity rover successfully landed on the Mars surface last Friday. These photos are the first to come back from the red planet. Very exciting times for the NASA team! <u>view more</u> -->
+													<%= f[:binder].body %>
+												</div>
+												<% end %>
+											</div>
+
+										<div style="clear:both"></div>
+									</div>
+								</a>
+
+							</div>
+
+
+							<div style="clear:both"></div>
+						</div>
+
+					<% when "updatetags" %>
+
+						<div class="newsitem">
+							<div class="imgarea">
+								<a href="#">
+									<!--<img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-ash2/273743_100002541791520_1077070822_q.jpg">-->
+									<img src=<%= f[:owner].info.avatar.thumb_md.url.to_s %>>
+								</a>
+							</div>
+
+
+							<div class="feedcontent">
+								<div class="thetitle">
+									<a href="#"><%= "#{f[:owner].fname} #{f[:owner].lname}" %></a> changed the tags for <a href="#"><%= f[:binder].parents[1]["title"] %></a> <%= time_ago_in_words(Time.at(f[:log].timestamp).to_datetime) %> ago.
+								</div>
+
+
+								<a href="#" class="conlink">
+									<div class="thecontent">
+											<!-- <div class="previmg" style="background-image: url(http://img.cla.co/3b4c0e0a00ddab30cff952e4a7158c95/thumb_lg.png)"></div> -->
+											<% if !f[:binder].current_version.nil? && f[:binder].current_version.imgstatus["img_thumb_lg"]["generated"] %>
+												<div class="previmg" style="background-image: url('<%= f[:binder].current_version.img_thumb_lg.url %>')"></div>
+											<% end %>
+
+											<div class="txtcon">
+												<div class="contitle">
+													<!--Curiosity Landing Pictures (NASA Exclusive)-->
+													<%= f[:binder].title %>
+												</div>
+
+												<% if !f[:binder].body.empty? %>
+												<div class="condesc">
+													<!-- The curiosity rover successfully landed on the Mars surface last Friday. These photos are the first to come back from the red planet. Very exciting times for the NASA team! <u>view more</u> -->
+													<%= f[:binder].body %>
+												</div>
+												<% end %>
+											</div>
+
+										<div style="clear:both"></div>
+									</div>
+								</a>
+
+							</div>
+
+
+							<div style="clear:both"></div>
+						</div>
+
+					<% when "setpub" %>
+
+						<div class="newsitem">
+							<div class="imgarea">
+								<a href="#">
+									<!--<img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-ash2/273743_100002541791520_1077070822_q.jpg">-->
+									<img src=<%= f[:owner].info.avatar.thumb_md.url.to_s %>>
+								</a>
+							</div>
+
+
+							<div class="feedcontent">
+								<div class="thetitle">
+									<a href="#"><%= "#{f[:owner].fname} #{f[:owner].lname}" %></a> shared <a href="#"><%= f[:binder].parents[1].nil? ? f[:binder].title : f[:binder].parents[1]["title"] %></a> <%= time_ago_in_words(Time.at(f[:log].timestamp).to_datetime) %> ago.
+								</div>
+
+
+								<a href="#" class="conlink">
+									<div class="thecontent">
+											<!-- <div class="previmg" style="background-image: url(http://img.cla.co/3b4c0e0a00ddab30cff952e4a7158c95/thumb_lg.png)"></div> -->
+											<% if !f[:binder].current_version.nil? && f[:binder].current_version.imgstatus["img_thumb_lg"]["generated"] %>
+												<div class="previmg" style="background-image: url('<%= f[:binder].current_version.img_thumb_lg.url %>')"></div>
+											<% end %>
+
+											<div class="txtcon">
+												<div class="contitle">
+													<!--Curiosity Landing Pictures (NASA Exclusive)-->
+													<%= f[:binder].title %>
+												</div>
+
+												<% if !f[:binder].body.empty? %>
+												<div class="condesc">
+													<!-- The curiosity rover successfully landed on the Mars surface last Friday. These photos are the first to come back from the red planet. Very exciting times for the NASA team! <u>view more</u> -->
+													<%= f[:binder].body %>
+												</div>
+												<% end %>
+											</div>
+
+										<div style="clear:both"></div>
+									</div>
+								</a>
+
+							</div>
+
+
+							<div style="clear:both"></div>
+						</div>
+
+					<% else %>
+						ERROR!<br />
+
+				<% end %>
+
 			<% end %>
 
 			<div class="newsitem">
