--- a/app/views/teachers/editinfo.html.erb
+++ b/app/views/teachers/editinfo.html.erb
@@ -49,6 +49,7 @@
 			</div>
 
 			<div>
+				<%= f.select(:title, options_for_select([["Mr.","Mr."],["Mrs.","Mrs."],["Ms.","Ms."],["Dr.","Dr."]]), :selected => current_teacher.title) %>
 				<%= f.text_field :fname, :placeholder => "First name", :class => "nametext" %>
 				<%= f.text_field :lname, :placeholder => "Last name", :class => "nametext" %>
 			</div>
